--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ target
 .cproject
 eclipse-classes
 .pydevproject
+.metadata
+
 # End of Eclipse IDE files
 
 # The usual location for proton-c build files
